--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,18 @@
 		<java.version>13</java.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
-			<groupId>com.edson.app.commons</groupId>
-			<artifactId>servico-commons</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>com.github.EdsonLuiz</groupId>
+			<artifactId>microservicos-spring-commons-produtos</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 
 		<dependency>
